src/ui/snapshots/herdr_worktree_nav__ui__render__tests__a_narrow_pane_still_says_which_checkout_a_sweep_is_talking_about.snap
---
source: src/ui/render.rs
expression: "screen(&state, 46, 16)"
---
" / sweep                             2 marked "
"──────────────────────────────────────────────"
" ◆ ● me/app (3)                              █"
"   ├── ● main             /wt/main           █"
" ◆ │  ├── ● claude        w1:p1              █"
"   │  └── · shell         w1:p2              █"
"   ├── ○ feat/l…  gone    /wt/feat-login     █"
"   │  └── ○ codex         w2:p1              █"
"[x]└── · fix/cr…  gone    /wt/fix-crash      █"
"                                             █"
"   ● me/site (1)                             █"
"   ├── ● develop          /wt/develop        │"
"   │  └── ● claude        w3:p1              │"
"[x]└── ·   PR #1234 merged    /wt/chore-deps │"
" me/app · main · w1:p1 · working · /wt/main ──"
" space mark  ↑↓ move  ↵ delete  esc done      "
