src/ui/snapshots/herdr_worktree_nav__ui__render__tests__a_pane_too_short_for_the_names_still_says_how_many_stop.snap
---
source: src/ui/render.rs
expression: "screen(&state, 92, 9)"
---
" / search panes                                                                     5 panes "
"────────────────────────────────────────────────────────────────────────────────────────────"
"   │  └── · shell         ┌──────────────────────────────────────┐                         │"
"   ├── ○ feat/login       │ Delete this checkout?                │                         █"
"   │  └── ○ codex         │   1 pane closes                      │                         │"
"   └── · fix/crash  no pan│   y delete     any other key cancels │                         │"
"                          └──────────────────────────────────────┘                         │"
" me/app · feat/login · w2:p1 · idle · /wt/feat-login ───────────────────────────────────────"
" y delete  any other key cancels                                                            "
