src/ui/snapshots/herdr_worktree_nav__ui__render__tests__a_short_pane_keeps_what_stops_and_gives_up_the_path.snap
---
source: src/ui/render.rs
expression: "screen(&state, 92, 11)"
---
" / search panes                                                                     5 panes "
"────────────────────────────────────────────────────────────────────────────────────────────"
" ◆ │  ├── ● claude      ┌──────────────────────────────────────────┐                       │"
"   │  └── · shell       │ Delete this checkout?                    │                       █"
"   ├── ○ feat/login     │   feat/login                             │                       █"
"   │  └── ○ codex       │   these panes close:                     │                       █"
"   └── · fix/crash  no p│   ○ codex  idle   w2:p1                  │                       │"
"                        │   y delete     any other key cancels     │                       │"
"   ● me/site (1)        └──────────────────────────────────────────┘                       │"
" me/app · feat/login · w2:p1 · idle · /wt/feat-login ───────────────────────────────────────"
" y delete  any other key cancels                                                            "
